# CMakeIssue

./: README.md  run.sh
proj1/: CMakeLists.txt  Proj1Config.cmake.in  proj1.c
proj2/: CMakeLists.txt  proj2.c
